container-fluid to container and course index modify

--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -240,6 +240,10 @@ img.bg {
   left: 0;
 }
 
+.bg-white{
+	background-color:white;
+}
+
 .bg-white-transparent{
 	background-color:white;
 	opacity:0.75;
