--- a/app/views/kaminari/_paginator.html.erb
+++ b/app/views/kaminari/_paginator.html.erb
@@ -1,19 +1,19 @@
 <%= paginator.render do -%>
   <div class="row " style="overflow:hidden">
-	<div class="col-md-6 col-md-offset-5">
-    <ul class="pagination">
-      <%= first_page_tag unless current_page.first? %>
-      <%= prev_page_tag unless current_page.first? %>
-      <% each_page do |page| -%>
-        <% if page.left_outer? || page.right_outer? || page.inside_window? -%>
-          <%= page_tag page %>
-        <% elsif !page.was_truncated? -%>
-          <%= gap_tag %>
-        <% end -%>
-      <% end -%>
-      <%= next_page_tag unless current_page.last? %>
-      <%= last_page_tag unless current_page.last? %>
-    </ul>
+		<div class="col-md-12 col-sm-12 col-xs-12 text-center">
+			<ul class="pagination" style="display:inline-block;">
+				<%= first_page_tag unless current_page.first? %>
+				<%= prev_page_tag unless current_page.first? %>
+				<% each_page do |page| -%>
+					<% if page.left_outer? || page.right_outer? || page.inside_window? -%>
+						<%= page_tag page %>
+					<% elsif !page.was_truncated? -%>
+						<%= gap_tag %>
+					<% end -%>
+				<% end -%>
+				<%= next_page_tag unless current_page.last? %>
+				<%= last_page_tag unless current_page.last? %>
+			</ul>
 		</div>
   </div>
 <% end -%>
