fix course rake and update checker js

--- a/app/views/course_content/show_compare.html.erb
+++ b/app/views/course_content/show_compare.html.erb
@@ -1,4 +1,4 @@
-<h2 style="border-bottom:solid 1px;">教授比一比</h2>
+<h2>教授比一比</h2>
 <div id="copare_container"></div>
 <script>
 	$(document).ready(function(){
@@ -81,8 +81,8 @@
 		<div class="row">
 		{% } %}
 			<div class="col-sm-4 ">
-				<div class="panel">
-					<div class="panel-body">
+				<div class="well">
+					<div class="panel-bod">
 						<div class="row">
 							<div class="col-sm-6 col-md-5 col-sm-offset-1">
 								<h4><a href="/courses/{%=ct.cd_id%}">{%=ct.name%}</a></h4>
