--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -89,12 +89,19 @@
 </div>
 
 <script>
-$(function(){
-	if($("#adv_toggle").prop("checked"))
-		$("#adv-search").removeClass("hidden");
-	$(".clickable-row").click(function() {
-			window.document.location = $(this).attr("href");
+	$(function(){
+		//console.log("<%=j session.to_json.html_safe%>");
+		if($("#adv_toggle").prop("checked"))
+			$("#adv-search").removeClass("hidden");
+		$(".clickable-row").click(function() {
+				window.document.location = $(this).attr("href");
 
+		});
+		<% if !current_user %>
+
+		//	toastr["info"]("登入並選擇系級,系統即可為您推薦課程!!");
+		<% elsif !current_user.has_imported? %>
+		//	toastr["success"]("<%=j link_to "匯入成績","/user/import_course",style:"color:blue;"%>後系統即可為您推薦課程!!");
+		<% end %>
 	});
-});
 </script>
