--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -97,6 +97,7 @@
 				window.document.location = $(this).attr("href");
 
 		});
+		toastr["success"]("已更新到104上的課程囉!!!");
 		<% if !current_user %>
 
 		//	toastr["info"]("登入並選擇系級,系統即可為您推薦課程!!");
