rewrite course simulation

--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -15,7 +15,7 @@
 				</div><!-- /btn-group -->			
 				<div class="input-group-btn">
 					
-					<button type="submit" class="btn btn-primary" id="search" onclick="/*$('#course_detail_search').submit();*/"><%=fa_icon "search"%></button>        
+					<button type="submit" class="btn btn-primary" id="search"><%=fa_icon "search"%></button>        
 				</div><!-- /btn-group -->
 			</div><!-- /input-group -->
 			<div class="checkbox">
