--- a/app/views/courses/simulation.html.erb
+++ b/app/views/courses/simulation.html.erb
@@ -4,18 +4,19 @@
 		<div class="panel panel-primary ">
 			<div class="panel-heading">
 				<h4 class="text-center">
-					<button id="has-select-btn" class="btn btn-circle btn-info pull-left" onclick="show_has_select()" style="margin-top: -5px;">
+					<button id="has-select-btn" class="btn btn-circle btn-info pull-left" onclick="showHasSelected()" style="margin-top: -5px;">
 						<font color="white"><%=fa_icon "check"%></font>
 					</button>	
 					課程查詢
-					<button id="suggest-btn" class="btn btn-circle btn-success pull-righ" onclick="showSearch();" style="margin-top: -5px;">
-						<font color="white"><%=fa_icon "search" %></font>
-					</button>
+
 				</h4>
 			</div>
 			<div class="panel-body">
 				<%= render "suggest_btns" %>
-				<div id="search_div" class="row schedule-search-bar"></div>
+				<div id="search_div" class="row schedule-search-bar">
+					<%= render "/courses/search/mini_form" %>
+					<div class="scrollable"></div>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -58,49 +59,13 @@
 				container :"body",
 				placement : "auto"
 		});
-
-		//sidebar search
-		$("#search_div").load("/courses/search_mini?sem_id=<%=Semester::LAST.id%>",function(){
-			show_has_select();
-		});		
-		
+		showHasSelected();
+	
 		//course table
 		load_course_table(<%=Semester::LAST.id%>, true);
-		
-		//sessionTest();
-		
+		//sessionTest();	
 	});
-	
-	function showSearch(){
-		$("#search_div").find('form').toggleClass("hidden");
-	}
-	function searchLackCourses(){
-		<% if current_user.is_undergrad? %>
-			$(".scrollable").html("<%=j loadingImg%>");
-			$.getJSON("/user/statistics", function (data) {
-				var pass_courses=getPassCourses(checkPassTaking,data.pass_score,data.user_courses);
-				var result=commonCheck(pass_courses);
-				var arr="[";
-				for(var dimension in result['common']){
-					if (result['common'][dimension]==0){ 
-						arr+='"'+dimension+'",';
-					}
-				}
-				if(arr.length==1){
-					$(".scrollable .text-center").text("你已經修完了喔^_^");
-				}
-				else{
-					arr=arr.substr(0,arr.length-1);
-					arr+=']';					
-					$("#dimension_search").val(arr);
-					$("form").submit();
-				}
-			});
-		<% else %>
-			$(".scrollable .text-center").text("你不需要修通識喔^_^");
-		<% end %>
-	}
-	
+
 	function load_course_table(semester_id, selectable){
 		$.getJSON("/user/get_courses?type=course_table&sem_id="+semester_id,function(data){
 			//console.log(data);
@@ -116,7 +81,8 @@
 			$('#schedule_table').CourseTable(data);	
 		});
 	}
-	function show_has_select(){
+	
+	function showHasSelected(){
 		$.getJSON("/user/get_courses?type=simulation",function(data){
 			//console.log(data);
 			$(".scrollable").html(tmpl("search_result", data));
@@ -127,21 +93,8 @@
 		$("#search_div").load("/course_details/mini?sem_id=<%=@sem_id%>");
 	}
 
-	function get_selected_time_slot(){
-		var selected = $('#schedule_table').CourseTable('getSelectedSlot');
-		if(selected.length>0){
-			var arr_str = '[';
-			for(var i=0, ele;ele=selected[i]; ++i)
-				arr_str+= '"'+ele+'",';
-			arr_str=arr_str.substr(0,arr_str.length-1);
-			arr_str+=']';
-			$('#timeslot_search').val(arr_str);
-			$(".scrollable").html("<%=j loadingImg%>");
-			$("form").submit();
-		}
-		else
-			toastr["warning"]("請先在右方課表選取時間");
-	}
+
 </script>
 
+<%=render "courses/search/search_js"%>
 <%=render "courses/search/xtmpl_results_mini"%>
