coursetable download remove; header course table add head

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -98,18 +98,18 @@
 			url: "/user/get_courses?type=course_table&sem_id="+semester_id,
 			dataType: "json",
 			success: function(data){
-			//	console.log(data);
-				var result = $.extend(true, [], data);
-				$("#global_modal .modal-content").html('').append('<div class="modal-body"></div>');
+				//console.log(data);
+				var $modal = $("#global_modal .modal-content") ;
+				var $header = $('<div>').addClass('modal-header text-center text-color-white bgColorBlue');
+				$header.html(data.semester_name);
+				$modal.html($header).append('<div class="modal-body"></div>');
 				var $table = $('<table>').addClass('table table-bordered');
         data.config = {
           deletable: false ,
           selectable: false,
           popover: true,
-		      downloadable: true,
 		      semester_id: semester_id
-        };
-								
+        };						
 				$("#global_modal .modal-body").html($table.CourseTable(data));
 
 				if(showNow)	
@@ -117,9 +117,9 @@
 				
       }
 		});
-		return result ;
+		return ;
 	}
-
+/*
 	function add_to_cart(id,type){
 		$.ajax({
 			type: "GET",
@@ -138,5 +138,5 @@
 		
 		});
 	}
-
+*/
 </script>
