edit user name and email

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -64,6 +64,9 @@
 					<% end %>
 					<ul class="dropdown-menu">
 						<li>
+								<a href="/user/edit/">編輯個人資料</a>
+						</li>	
+						<li>
 							<%= link_to  "登出", destroy_user_session_path, :method => :delete %>
 						</li>					
 					</ul>
