--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,6 +12,6 @@
  *= require bootstrap
  *= require jquery.fileupload-ui
  *= require font-awesome
- *= require_tree .
+ *= require_directory .
 
  */
