--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -32,6 +32,7 @@
 
 				<li><a href="/courses/" rel="nofollow">全校課程</a></li>
 				<li><a href="/courses/simulation" rel="nofollow">模擬排課</a></li>
+				<li><%=link_to "關於我們", main_member_intro_path %></li>
 				<!--<li><a href="/course_maps" rel="nofollow">課程地圖</a></li>-->
 				<!--<li><a href="/events/" rel="nofollow">talk</a></li>-->
 			
