header course table download link re-add

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -115,6 +115,12 @@
 				if(showNow)	
 					$("#global_modal").modal('show');	
 				
+				var image_link_callback = function(){
+				  $table.CourseTable("renderImg");
+				};
+				
+				var $but_group = $table.CourseTable("generateDownloadButton", {"callback": image_link_callback, "sem_id": semester_id});
+				$header.append($but_group);
       }
 		});
 		return ;
