--- a/app/views/course_content/show_compare.html.erb
+++ b/app/views/course_content/show_compare.html.erb
@@ -84,7 +84,7 @@
 				<div class="well">
 					<div class="panel-bod">
 						<div class="row">
-							<div class="col-sm-6 col-md-5 col-sm-offset-1">
+							<div class="col-sm-12 col-md-12">
 								<h4><a href="/courses/{%=ct.cd_id%}">{%=ct.name%}</a></h4>
 							</div>
 							<div class="text-right" id="best_{%=ct.id%}">
