--- a/app/views/kaminari/_prev_page.html.erb
+++ b/app/views/kaminari/_prev_page.html.erb
@@ -7,5 +7,5 @@
     remote:        data-remote
 -%>
 <li class="prev">
-  <%= link_to_unless current_page.first?, '上一頁', url, :rel => 'prev', :remote => remote %>
+  <%= link_to_unless current_page.first?, raw(t 'views.pagination.prev'), url, :rel => 'prev', :remote => remote %>
 </li>
