--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -92,15 +92,15 @@
 	
 	function show_timetable_on_modal(semester_id, showNow){
 		var result=0 ;
-		$("#global_modal .modal-content").html('loading..');
 		$.ajax({
-			//async: true, // This will make call synchronous
-			url: "/user/get_courses?type=course_table&sem_id="+semester_id,
+			url: "/user/get_courses",
+			data:{
+				type: "course_table",
+				sem_id: semester_id
+			},
 			dataType: "json",
 			success: function(data){
-			//	console.log(data);
 				var result = $.extend(true, [], data);
-				$("#global_modal .modal-content").html('').append('<div class="modal-body"></div>');
 				var $table = $('<table>').addClass('table table-bordered');
         data.config = {
           deletable: false ,
@@ -109,12 +109,8 @@
 		      downloadable: true,
 		      semester_id: semester_id
         };
-								
-				$("#global_modal .modal-body").html($table.CourseTable(data));
+				showGlobalModal($("a[sem="+semester_id+"]").text(),$table.CourseTable(data));
 
-				if(showNow)	
-					$("#global_modal").modal('show');	
-				
       }
 		});
 		return result ;
@@ -132,7 +128,7 @@
 			success : function(data){
 				toastr[data["class"]](data["text"]);
 				if(type=="delete"){
-					$("#global_modal .modal-body").load("/courses/show_cart");
+					$("#global-modal .modal-body").load("/courses/show_cart");
 				}			
 			}
 		
