--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,9 +21,15 @@
 
 <% image_tag(asset_path("head_1.jpg"), :id=>'bg1', :class=>"bg", :alt=>"NCTU+")%>
 
-<div class="modal fade" id="global_modal" tabindex="-1" role="dialog" aria-hidden="true" >
+<div class="modal fade" id="global-modal" tabindex="-1" role="dialog" aria-hidden="true" >
 	<div class="modal-dialog" >
-		<div class="modal-content" ></div>
+		<div class="modal-content" >
+			<div class="modal-header" >
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+				<h4 class="modal-title"></h4>
+			</div>
+			<div class="modal-body" ></div>
+		</div>
 	</div>
 </div>
 
