--- a/app/views/course_maps/public/_xtmpl_course_table.html.erb
+++ b/app/views/course_maps/public/_xtmpl_course_table.html.erb
@@ -1,13 +1,16 @@
 <script type="text/x-tmpl" id="cm_public">
-	<h3 id="title">		
-		{%= o.dept_name %} 入學年度:
+
+	<h3 id="title" style="line-height:160%">		
+		<b>{%= o.dept_name %} 入學年度:</b><!--tmpl 插件 0 保留字-->
 		<div id="year-selector" class="btn-group" style="margin-top:-2px;">
 			<a id="year-100" class="btn btn-info" href="?dept_id={%=o.dept_id%}&year=100">100</a>
 			<a id="year-101" class="btn btn-info" href="?dept_id={%=o.dept_id%}&year=101">101</a>
 			<a id="year-102" class="btn btn-info" href="?dept_id={%=o.dept_id%}&year=102">102</a>
 			<a id="year-103" class="btn btn-info" href="?dept_id={%=o.dept_id%}&year=103">103</a>
-		</div>		
-	{% var cm=o.course_map; %}
+		</div>
+		
+	<h4 style="color:#555;">{% var cm=o.course_map; %}畢業學分:<strong>{%=cm.total_credit%}</strong></h4>
+		
 	{% if(!cm){ %}
 		<a href="http://aadm.nctu.edu.tw/chcourse/class03.aspx?ftype=3" class="btn btn-primary" target="_blank">
 			<%=fa_icon "bookmark-o"%>必修科目表
@@ -16,28 +19,34 @@
 	<hr>
 	<h4>尚無資料!</h4>
 	{% } else{ %}
-		&nbsp;&nbsp;畢業學分:<strong>{%=cm.total_credit%}</strong>
+		&nbsp;&nbsp;
+		<div class="right" style="text-align:left; display:inline-block;float:left;">
 		<button class="btn btn-info" onclick="show_tip();">使用導覽</button>
 		<a href="http://aadm.nctu.edu.tw/chcourse/class03.aspx?ftype=3" class="btn btn-primary" target="_blank">
 			<%=fa_icon "bookmark-o"%>必修科目表
-		</a>
+		</a></div>
+		<br>
 	</h3>
 	<hr>
 		<section id="rules">
 		<h3><strong>修課規定</strong></h3>
+
 		{% for(var i=0,cf;cf=cm.cfs[i];i++){ %}		
 			{% print(parseCf(cf),true); %}		
 		{% } %}
 		</section>
 		<hr>
-		<section id="chart-content"></section>
-		<div id="course-table">
+		<!--<section id="chart-content"></section>-->
+		<div id="course-table" style="width:93%;">
 			<h3>
 				<strong>課程列表</strong>
-				分類:
+
 				<div class="btn-group" style="margin-top:-2px;">
 					<button id="sem-btn" class="btn btn-success" onclick="toggle_cf_table(false);">
 						修課學期
+					</button>
+					<button id="map-btn" class="btn btn-success" onclick="toggle_cf_table(true);">
+						課程地圖
 					</button>
 					<button id="cf-btn" class="btn btn-success" onclick="toggle_cf_table(true);">
 						學程
@@ -46,82 +55,91 @@
 				<button class="btn btn-default" type="show" onclick="toggleBtn($(this));/*$('.toggle-group').click();*/">展開課程群組</button>
 			</h3>
 			<hr>
+			<div class="tooltip-course">
+				<div class="course-name">
+				Course Name
+				</div>
+				<dic class="course-content">
+					
+				</div>
+			</div>
+			
+			
+			<section id ="list_by_cf" style="z-index:-1;">
+			<div class ="widget-course">
+				<div class="widget-line">
+					<div class ="square-course" id="btn-course-required"></div> 必修課程
+				</div>
+				<div class="widget-line">
+					<div class ="square-course" id="btn-course-main"></div> 核心課程
+				</div>
+				<div class="widget-line">
+					<div class ="square-course" id="btn-course-minor"></div> 複核心課程
+				</div>
+			</div>
+				
+			</section>
+			<!--
 			<section id="list_by_cf">
+			<table class="table table-striped" >
 				{% var allCourses=[]; %}
 				{% for(var i=0,cf;cf=cm.cfs[i];i++){ %}
 					{% var res=parseCfToCourse(cf); %}	
-					{% allCourses=allCourses.concat(res["courses"]); %}
+					{% allCourses=allCourses.concat(res["courses"]); %}//口>口>口>口.....
 					{% print(res["html"],true); %}				
 				{% } %}
-			</section>
-		{% var coursesbyGrade=groupBy(allCourses,function(item){return item.suggest_sem;});%}
-		{% grade_sort(coursesbyGrade);%}
-			<section id="list_by_sem" style="display:none;">
-				<table class="table table-bordered">			
-				{% for(var i=0,courses;courses=coursesbyGrade[i];i++){ %}
-					{% for(var j=0,course;course=courses[j];j++){ %}
-						{% if(j==0){ %}
-							{% $("#course-table-sroll").append('<li class="sem-li"><a href="#sem-'+course.grade+course.half+'">'+course.suggest_sem+'</a></li>'); %}
-							
-							<tr class="label-info row" id="sem-{%=course.grade+course.half%}">
-								<td class="text-center" colspan="5">{%=course.suggest_sem%}</td>
-							</tr>
-							<tr class="row">
-								<th class="col-md-1"></th>					
-								<th class="col-md-3 text-center">課名</th>
-								<th class="col-md-1 text-center">學分</th>
-								<th class="col-md-2 text-center">永久課號</th>
-								<th class="col-md-5 text-center">學程</th>
-							</tr>
-						{%  } %}
-						<tr class="row {%= course.cg_courses ? "lead_course" : "" %}">
-							{% if(course.cg_courses){ %}
-								<td class="text-center clickable-hover toggle-group" onclick="toggleGroup($(this),{%=course.cf.id%},{%=course.id%});">
-									<i class="fa fa-plus">
-								</td>
-							{% }else{ %}
-								<td class="text-center">									
-								</td>
-							{% } %}
-							<td class="text-center">
-								{%=course.name%}
-							</td>
-							<td class="text-center">{%=course.credit%}</td>
-							<td class="text-center">{%=course.real_id%}</td>
-							<td class="text-center">							
-								{% if(course.parent_cf!=null){ %}
-									{%= course.parent_cf.cf_name+'-['+get_cf_type(course.cf.cf_type)+']'+course.cf.cf_name %}
-								{% }else{ %}
-									{%= '['+get_cf_type(course.cf.cf_type)+']'+course.cf.cf_name%}
-								{% } %}
-							</td>
-						</tr>
-						{% if(course.cg_courses){ %}
-							{% for(var k=0,cg_course;cg_course=course.cg_courses[k];k++){ %}
-							<tr class="row cf-{%=cg_course.cf.id%}-{%=course.id%}" style="display:none;">
-								<td class="text-center">
-									<i class="fa fa-angle-right">
-								</td>	
-								<td class="text-center">{%=cg_course.name%}</td>
-								<td class="text-center">{%=cg_course.credit%}</td>
-								<td class="text-center">{%=cg_course.real_id%}</td>
-								<td class="text-center"></td>
-							</tr>
-							{% } %}
-						{% } %}						
-					{% } %}
-				{% } %}				
 				</table>
 			</section>
+			-->
+		{% var coursesbyGrade=groupBy(allCourses,function(item){return item.suggest_sem;});%}
+		{% grade_sort(coursesbyGrade);%}
+			{% console.log(coursesbyGrade); %}
+			<section id="list_by_sem" style="display:none;" >
+				<table class="table" >
+				<tr class="text-center grade1" >
+						<th class="text-center" colspan="2">一年級</th>
+						<th class="text-center grade2" colspan="2">二年級</th>
+						<th class="text-center grade2" colspan="2">三年級</th>
+						<th class="text-center grade2" colspan="2">四年級</th>
+					</tr>
+					<tr class="text-center semester1" >
+						{% for(var i=0;i<4;i++){ %}
+							{% if(i==0){ %}
+								<th class="text-center semester1">上學期</th>
+								<th class="text-center semester2" >下學期</th>
+							{% }else{ %}
+								<th class="text-center semester2" style="border-left:5px #fff solid">上學期</th>
+								<th class="text-center semester2" >下學期</th>
+							{% } %}
+						{% } %}	
+					</tr>			
+				
+						
+						<tr>
+						{% for(var i=0,courses;courses=coursesbyGrade[i];i++){ %}
+							<td style="width:12%;" {% if(i!=0 && i%2==0){ %}id="table-gray-line" {% } %} >
+								{% for(var j=0,course;course=courses[j];j++){ %}
+									<div class="btn-course" id="btn-course-minor" data="{%=JSON.stringify(course)%}" >{%=course.name%}</div>
+								{% } %}
+							</td>
+						{% } %}
+						</tr>	
+					
+														
+				</table>
+			</section>
+			
 			<hr>
+			<section id="chart-content"></section>
 			<section id="memo">	
 				<h3><strong>備註</strong></h3>
-				<h4>
+				<h5 style="line-height:150%">
 					{% if(cm.desc!="") %}
 					{% print(cm.desc.replace(/(?:\r\n|\r|\n)/g, '<br />'),true); %}
-				</h4>
+				</h5>
 			</section>
 			
 		</div>
 	{% } %}	
+	
 </script>
