share course table method and page

--- a/app/views/courses/simulation.html.erb
+++ b/app/views/courses/simulation.html.erb
@@ -33,7 +33,7 @@
 						</button>
 						<ul class="dropdown-menu" role="menu">
 							<li><a href="/courses/export_timetable.xls?sem_id=<%=Semester::LAST.id%>">Excel</a></li>
-							<li><a href="#" onclick="$('#schedule_table').CourseTable('renderImg');">Image</a></li>
+							<li><a href="#" onclick="$('#schedule_table').CourseTable('renderImg', 'window');">Image</a></li>
 						</ul>
 					</div>
 				</h4>		
