--- a/app/views/user/share.html.erb
+++ b/app/views/user/share.html.erb
@@ -1,21 +1,8 @@
-<html>
-<head>
-  <title><%=@user.name%> <%=@semester.name%></title>
-  <meta property="og:title" content="<%=@user.name%>" ></meta>
-  <meta property="og:description" content="<%=@semester.name%> 課表" ></meta>
-  <meta property="og:url" content="http://nctuplus.nctucs.net:3999/shares/<%=params[:id]%>?semester=<%=params[:semester]%>" ></meta>
-  <meta property="og:image" content="http://nctuplus.nctucs.net:3999/course_table_shares/<%=@file_name%>"/>
-  <%=stylesheet_link_tag("https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css")%>
-  <%=stylesheet_link_tag "course", "data-turbolinks-track" => true %>
-</head>
-<body>
-  <table class="table table-bordered" id="myCourseTable" style="height: 800px; width: 600px;"></table>
-</body>
-</html>
-
-<%=javascript_include_tag "http://code.jquery.com/jquery-2.1.4.min.js", "data-turbolinks-track" => true %>
-<%=javascript_include_tag "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js", "data-turbolinks-track" => true %>
-<%=javascript_include_tag "courses/table", "data-turbolinks-track" => true %>
+  
+<div class="well" style="background-color:white;"> 
+  <h4 class="text-center"><%=@user.name%> <%=@semester.name%></h4> 
+  <table class="table table-bordered" id="myCourseTable"></table>
+</div>
 <script>
   var $table = $('#myCourseTable') ;
   $.getJSON("/shares/<%=params[:id]%>?semester=<%=params[:semester]%>",function(data){
@@ -23,3 +10,11 @@
 			$table.CourseTable(data);	
 	});
 </script>
+<style>
+  #myCourseTable{
+    height: 800px; 
+    width: 600px; 
+    margin-left: auto; 
+    margin-right: auto; 
+  }
+</style>
