--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,6 +12,7 @@
  *= require bootstrap
  *= require jquery.fileupload-ui
  *= require font-awesome
+ *= require bootstrap3-switch
  *= require_tree .
 
  */
