--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,14 +12,17 @@
 
 	<% if params[:controller]!="main"%>
 		<meta name="robots" content="noindex">
+		
 	<% end %>
-	<meta name="description" content="NCTU+ 交大智慧選課系統">
+	
 	<meta property="fb:app_id" content="<%=Facebook::APP_ID%>" />
 	<% if @fb_share_meta %>
 	  <meta property="og:title" content="<%=@user.name%>" ></meta>
-    <meta property="og:description" content="<%=@semester.name%> 課表" ></meta>
-    <meta property="og:url" content="<%=@host%>/shares/<%=params[:id]%>" ></meta>
-    <meta property="og:image" content="<%=@host%>/course_table_shares/<%=@file_name%>"/>
+    <meta property="og:description" content="<%=@user.department.ch_name%> <%=@semester.name%> 課表" ></meta>
+    <meta property="og:url" content="<%=root_url%>shares/<%=params[:id]%>" ></meta>
+    <meta property="og:image" content="<%=root_url%>course_table_shares/<%=@file_name%>"/>
+  <% else %>
+    <meta name="description" content="NCTU+ 交大智慧選課系統">  
 	<% end %>
 	
 </head>
